Fixed navbar shifting when modal open.

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -169,6 +169,10 @@ div .panel > .panel-heading {
     background-color: #F5F8FF;
 }
 
+.modal-open .navbar-default {
+	padding-right: 0px !important;
+}
+
 .modal-open[style] {
     padding-right: 0px !important;
 }
